src/components/Issue/Issue.css
.Issue {
	display: flex;
	width: 100%;
	padding: 1rem;
	border-top: 1px solid #e1e4e8;
	justify-content: space-between;
	align-items: flex-start;
	line-height: 1;
}

.Issue:hover {
	background-color: #f6f8fa;
}

.Issue-Info {
	margin-left: 0.5rem;
	margin-right: 1rem;
}

.Issue-Content {
	flex: auto !important;
	display: flex;
	flex-direction: column;
	margin-top: -8px;
}

.Issue-Title {
	display: flex;
	align-items: center;
}

.Issue-Title h3 {
	margin: 0;
}

.Issue-Title a {
	color: #24292e;
	margin-right: 1rem;
	line-height: 1.5;
	word-break: break-word;
}

.Issue-Title a:hover {
	color: #0366d6 !important;
}

.Issue-Labels {
	display: inline-block;
}

.Issue-Label {
	height: 20px;
	padding: 0.15em 4px;
	font-size: 12px;
	font-weight: 600;
	line-height: 15px;
	border-radius: 2px;
	box-shadow: inset 0 -1px 0 rgba(27, 31, 35, 0.12);
	background-color: #d4c5f9;
	color: black;
	cursor: pointer;
}

.Issue-Label:not(:first-child) {
	margin: 0 0.5rem;
}

.Issue-Comments {
	display: flex;
	align-items: center;
	margin-left: 1rem;
}

.Issue-Comments span {
	margin-left: 0.4rem;
}

.Issue-Extra {
	margin: 0;
	margin-top: 1rem;
	font-size: 12px;
}

